--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "windoface/yii2-gallery-viewer",
+	"version": "1.0.0",
     "description": "Image gallery widget for the Yii framework",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","windoface","gallery","yii2","yii2-gallery","yii2-gallery-viewer"],
