--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "keywords": ["yii2","extension","windoface","gallery","yii2","yii2-gallery","yii2-gallery-viewer"],
     "license": "GPL-3.0+",
 	"homepage": "https://github.com/windoface/yii2-gallery-viewer",
-    "authors": [
+    "minimum-stability": "dev",
+    "prefer-stable" : true,
+	"authors": [
         {
             "name": "Kinggeorge Magaga",
             "email": "magagageorge@gmail.com"
