--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,22 @@
 	"homepage": "https://github.com/windoface/yii2-gallery-viewer",
     "minimum-stability": "dev",
     "prefer-stable" : true,
-	"authors": [
-        {
-            "name": "Kinggeorge Magaga",
-            "email": "magagageorge@gmail.com"
-        }
-    ],
     "repositories":[
       {
         "type": "git",
         "url": "https://github.com/windoface/yii2-gallery-viewer"
        }
     ],	
+	"authors": [
+        {
+            "name": "Kinggeorge Magaga",
+            "email": "magagageorge@gmail.com"
+        }
+    ],
+    "require": {
+        "yiisoft/yii2": "~2.0.0",
+        "bower-asset/blueimp-gallery": "~2.15.0"
+    },		
     "autoload": {
         "psr-4": {
             "windoface\\galleryviewer\\": "src"
